--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "stylicle-beauty-bar",
   "version": "0.0.1",
   "type": "module",
+  "homepage": "https://ignovators-public.github.io/Stylicle-Beauty-Bar",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.511.0",
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.0",
+    "gh-pages": "^6.3.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.0.0",
     "vite": "^4.0.0"
